<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <item android:id="@+id/options"
          android:icon="@drawable/ic_home_black_24dp"
          android:title="@string/Options"
          app:showAsAction="never" />
    <item android:id="@+id/settings"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/Settings"
        app:showAsAction="never"/>
    <item android:id="@+id/groupchatroom"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/GroupChat"
        app:showAsAction="never"/>
    <item android:id="@+id/map"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/Map"
        app:showAsAction="never"/>
    <item android:id="@+id/schedule"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/schedule"
        app:showAsAction="never"/>
    <item android:id="@+id/userprofile"
    android:icon="@drawable/ic_home_black_24dp"
    android:title="UserProfile"
    app:showAsAction="never"/>
    <item android:id="@+id/exit"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/Exit"
        app:showAsAction="never"/>
    <item android:id="@+id/log_out"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/Log_Out"
        app:showAsAction="never"/>

</menu>